# rag-backend

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  prueba-rag.txt  pyproject.toml
alembic/: env.py
alembic/versions/: 20260614_000001_initial_schema.py  20260616_000001_add_rag_vector_search.py  20260617_000001_add_rag_hybrid_search.py  20260630_000001_add_rag_conversations_phase_6.py
docs/: rag-pipeline.html  rag-pipeline.md
src/rag_backend/: main.py
src/rag_backend/api/: app.py  router.py
src/rag_backend/core/: config.py  database.py  errors.py  security.py
src/rag_backend/modules/documents/application/: dtos.py  ports.py  services.py
src/rag_backend/modules/documents/domain/: entities.py
src/rag_backend/modules/documents/infrastructure/: models.py  repositories.py  storage.py
src/rag_backend/modules/documents/interfaces/: router.py  schemas.py
src/rag_backend/modules/identity/application/: dtos.py  ports.py  services.py
src/rag_backend/modules/identity/domain/: entities.py
src/rag_backend/modules/identity/infrastructure/: models.py  repositories.py  security.py
src/rag_backend/modules/identity/interfaces/: dependencies.py  router.py  schemas.py
src/rag_backend/modules/rag/application/: dtos.py  ports.py  services.py  types.py
src/rag_backend/modules/rag/domain/: entities.py  (+1 more)
tests/: conftest.py  test_cors.py  test_documents.py  test_health.py  test_identity.py  test_rag.py  test_rag_conversations.py  test_rag_prompt_builder.py  test_rag_retrieval.py  test_settings.py  test_workspaces.py
(+28 files in other folders)
