[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-backend"
version = "0.1.0"
description = "Modular monolith backend foundation for Technical Knowledge Workspace"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.2",
  "asyncpg>=0.29.0",
  "bcrypt<5",
  "email-validator>=2.2.0",
  "fastapi>=0.115.0",
  "langchain>=0.3.0",
  "langchain-google-genai>=2.0.0",
  "langchain-text-splitters>=0.3.0",
  "pgvector>=0.3.3",
  "pydantic-settings>=2.4.0",
  "pypdf>=5.0.0",
  "PyJWT>=2.9.0",
  "python-multipart>=0.0.9",
  "redis>=5.0.8",
  "SQLAlchemy>=2.0.34",
  "uvicorn[standard]>=0.30.6",
  "passlib[bcrypt]>=1.7.4",
]

[project.optional-dependencies]
dev = [
  "aiosqlite>=0.20.0",
  "httpx>=0.27.2",
  "pytest>=8.3.2",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.6.4",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
